public/_new-layout-eventweekly/css/style.css
/* ... */
#footer .widgets:before, #footer .widgets:after {
  content: "";
  display: table;
}
#footer .widgets:after {
  clear: both;
}
#footer .widgets .widget {
  float: left;
  padding: 0 0 0 1.6%;
}
#footer .widgets .widget__title {
  color: #F7931E;
  font-family: "Open Sans";
  font-size: 20px;
  font-weight: 300;
  margin-bottom: 25px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__title {
    font-size: 22px;
  }
}
#footer .widgets .widget__text {
  font-family: "Open Sans";
  font-weight: 300;
  font-size: 14px;
  color: #B3B3B3;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__text {
    font-size: 16px;
  }
}
#footer .widgets .widget a {
  color: #B3B3B3;
}
#footer .widgets .widget ul li {
  margin-bottom: 15px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget ul li {
    margin-bottom: 25px;
  }
}
#footer .widgets .widget .social__item {
  display: inline-block;
  font-size: 30px;
  margin-right: 10px;
}
#footer .widgets .widget .social__item a {
  position: relative;
  display: block;
  width: 26px;
  height: 34px;
  overflow: hidden;
  color: #D67F1A;
}
#footer .widgets .widget .social__item a:active {
  top: 1px;
}
@media only screen and (max-width: 695px) {
  #footer .widgets .widget {
    width: 50%;
  }
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget {
    width: 100%;
    text-align: center;
  }
}

#content {
  position: relative;
  padding-bottom: 60px;
}

.layout__left {
  float: left;
}
.layout__right {
  float: right;
}

.page {
  position: relative;
  min-height: 100%;
  padding-top: 25px;
}
.page__title {
  font-family: "Open Sans";
  font-size: 42px;
  font-weight: 300;
  color: #F7931E;
  margin-bottom: 30px;
}
.page.page-main {
  padding-top: 50px;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
  background-color: rgba(0, 0, 0, 0.5);
}

.sidebar-filters {
  position: absolute;
  top: 0;
  left: 0;
  width: 390px;
  height: 100%;
  padding: 10px 0 30px;
  background: #262626;
  z-index: 100;
  overflow: scroll;
}
@media only screen and (max-width: 320px) {
  .sidebar-filters {
    width: 300px;
  }
}

.ew-filter-link {
  position: fixed;
  top: 216px;
  left: 0;
  z-index: 100;
}
.ew-filter-link--is-open {
  left: 390px;
}
.ew-filter-link a {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  display: inline-block;
  padding: 13px 10px;
  background: #A15F14;
  text-align: center;
  font-size: 0;
  vertical-align: middle;
}
.ew-filter-link a:before {
  font-size: 26px;
  color: #fff;
}

.b-popular-events-slider__slide {
  position: relative;
  width: 100%;
  height: auto;
  max-height: 400px;
  overflow: hidden;
}
.b-popular-events-slider__dots {
  display: block;
  margin: 20px 0;
  text-align: center;
}
.b-popular-events-slider__dots span {
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  display: inline-block;
  width: 9px;
  height: 5px;
  padding: 5px;
  margin: 0 3px;
  background: #666666;
  border: 3px solid #595959;
  cursor: pointer;
}
.b-popular-events-slider__dots span.swiper-active-switch {
  background: #C27417;
}

.b-slide {
  position: relative;
}
.b-slide__picture {
  position: relative;
}
.b-slide__picture img {
  width: 100%;
  max-width: 100%;
}
.b-slide__info {
  position: absolute;
  bottom: 20%;
  padding: 20px 25px;
  background-color: rgba(0, 0, 0, 0.7);
}
@media only screen and (max-width: 695px) {
  .b-slide__info {
    bottom: 0;
    width: 100%;
    text-align: center;
  }
}
.b-slide__title {
  font-family: "Open Sans";
  font-size: 42px;
  font-weight: 300;
  color: #F7931E;
  margin-bottom: 20px;
}
.b-slide__title a {
  color: #F7931E;
  text-decoration: none;
}
@media only screen and (max-width: 695px) {
  .b-slide__title {
    font-size: 24px;
    margin: 10px 0;
  }
}
.b-slide__description {
  margin-bottom: 20px;
  font-family: "Open Sans";
  font-size: 16px;
  font-weight: 300;
  color: #E6E6E6;
}
.b-slide__description p {
  margin: 0 0 10px 0;
}
@media only screen and (max-width: 695px) {
  .b-slide__description {
    font-family: "Open Sans";
    font-size: 12px;
    font-weight: 300;
    color: #E6E6E6;
    margin: 0;
  }
}
.b-slide__button-detail {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  display: inline-block;
  position: relative;
  padding: 10px 15px;
  cursor: pointer;
  font-family: "Open Sans";
  font-size: 16px;
  background: #D6801A;
  color: #fff;
  outline: 0;
  border: 0;
  text-decoration: none;
  text-align: center;
}
.b-slide__button-detail i {
  margin-right: 5px;
}
.b-slide__button-detail:active {
  top: 1px;
}
@media only screen and (max-width: 695px) {
  .b-slide__button-detail {
    display: none;
  }
}

.list-of-events {
  position: relative;
  padding: 0 0 45px 0;
}
@media only screen and (max-width: 768px) {
  .list-of-events.col-4 .list-of-events__item {
    width: 50%;
    margin-bottom: 1.6%;
  }
}
@media only screen and (max-width: 695px) {
  .list-of-events.col-4 .list-of-events__item {
    width: 100%;
    margin: 0 0 20px 0;
  }
}
.list-of-events.col-4 .list-of-events__picture img {
  height: 280px;
}
@media only screen and (max-width: 768px) {
  .list-of-events.col-4 .list-of-events__picture img {
    height: 380px;
  }
}
@media only screen and (max-width: 695px) {
  .list-of-events.col-4 .list-of-events__picture img {
    width: 100%;
    height: auto;
  }
}
.list-of-events.col-4 .list-of-events__title {
  font-size: 26px;
}
.list-of-events .header {
  float: left;
  width: 100%;
  margin-bottom: 30px;
}
.list-of-events .header__title {
  float: left;
  font-family: "Open Sans";
  font-size: 24px;
  font-weight: 300;
  color: #ccc;
  margin: 0;
}
/* ... */

